WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282331
[GTK][Debug] Crash in AudioWorkletMessagingProxy destructor
https://bugs.webkit.org/show_bug.cgi?id=282331
Summary
[GTK][Debug] Crash in AudioWorkletMessagingProxy destructor
Philippe Normand
Reported
2024-10-30 08:49:32 PDT
Thread 1 (Thread 0x7f55b7040f80 (LWP 968198)): #0 0x0000000000000000 in () #1 0x00007f55d462e486 in WebCore::AudioWorkletMessagingProxy::operator delete(WebCore::AudioWorkletMessagingProxy*, std::destroying_delete_t, unsigned long) (object=0x7f55ad598600, size=64) at /app/webkit/Source/WebCore/Modules/webaudio/AudioWorkletMessagingProxy.h:43 #2 0x00007f55d46372c5 in WebCore::AudioWorkletMessagingProxy::~AudioWorkletMessagingProxy() (this=0x7f55ad598600, __in_chrg=<optimized out>) at /app/webkit/Source/WebCore/Modules/webaudio/AudioWorkletMessagingProxy.cpp:82 #3 0x00007f55d461b0b9 in WTF::ThreadSafeRefCounted<WebCore::WorkletGlobalScopeProxy, (WTF::DestructionThread)0>::deref() const (this=0x7f55ad598608) at /app/webkit/WebKitBuild/GTK/Debug/WTF/Headers/wtf/ThreadSafeRefCounted.h:139 #4 0x00007f55d4644658 in WTF::DefaultRefDerefTraits<WebCore::WorkletGlobalScopeProxy>::derefIfNotNull(WebCore::WorkletGlobalScopeProxy*) (ptr=0x7f55ad598600) at /app/webkit/WebKitBuild/GTK/Debug/WTF/Headers/wtf/Ref.h:62 #5 0x00007f55d463ec37 in WTF::Ref<WebCore::WorkletGlobalScopeProxy, WTF::RawPtrTraits<WebCore::WorkletGlobalScopeProxy>, WTF::DefaultRefDerefTraits<WebCore::WorkletGlobalScopeProxy> >::~Ref() (this=0x7f55ad4a7e00, __in_chrg=<optimized out>) at /app/webkit/WebKitBuild/GTK/Debug/WTF/Headers/wtf/Ref.h:82 #6 0x00007f55d7cd7e2f in WTF::VectorDestructor<true, WTF::Ref<WebCore::WorkletGlobalScopeProxy, WTF::RawPtrTraits<WebCore::WorkletGlobalScopeProxy>, WTF::DefaultRefDerefTraits<WebCore::WorkletGlobalScopeProxy> > >::destruct(WTF::Ref<WebCore::WorkletGlobalScopeProxy, WTF::RawPtrTraits<WebCore::WorkletGlobalScopeProxy>, WTF::DefaultRefDerefTraits<WebCore::WorkletGlobalScopeProxy> >*, WTF::Ref<WebCore::WorkletGlobalScopeProxy, WTF::RawPtrTraits<WebCore::WorkletGlobalScopeProxy>, WTF::DefaultRefDerefTraits<WebCore::WorkletGlobalScopeProxy> >*) (begin=0x7f55ad4a7e00, end=0x7f55ad4a7e08) at /app/webkit/WebKitBuild/GTK/Debug/WTF/Headers/wtf/Vector.h:72 #7 0x00007f55d7cd6606 in WTF::VectorTypeOperations<WTF::Ref<WebCore::WorkletGlobalScopeProxy, WTF::RawPtrTraits<WebCore::WorkletGlobalScopeProxy>, WTF::DefaultRefDerefTraits<WebCore::WorkletGlobalScopeProxy> > >::destruct(WTF::Ref<WebCore::WorkletGlobalScopeProxy, WTF::RawPtrTraits<WebCore::WorkletGlobalScopeProxy>, WTF::DefaultRefDerefTraits<WebCore::WorkletGlobalScopeProxy> >*, WTF::Ref<WebCore::WorkletGlobalScopeProxy, WTF::RawPtrTraits<WebCore::WorkletGlobalScopeProxy>, WTF::DefaultRefDerefTraits<WebCore::WorkletGlobalScopeProxy> >*) (begin=0x7f55ad4a7e00, end=0x7f55ad4a7e08) at /app/webkit/WebKitBuild/GTK/Debug/WTF/Headers/wtf/Vector.h:255 #8 0x00007f55d7cd4e28 in WTF::Vector<WTF::Ref<WebCore::WorkletGlobalScopeProxy, WTF::RawPtrTraits<WebCore::WorkletGlobalScopeProxy>, WTF::DefaultRefDerefTraits<WebCore::WorkletGlobalScopeProxy> >, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>::~Vector() (this=0x7f541a0126c0, __in_chrg=<optimized out>) at /app/webkit/WebKitBuild/GTK/Debug/WTF/Headers/wtf/Vector.h:781 #9 0x00007f55d7cd267b in WebCore::Worklet::~Worklet() (this=0x7f541a012660, __in_chrg=<optimized out>) at /app/webkit/Source/WebCore/worklets/Worklet.cpp:54 #10 0x00007f55d465a56f in WebCore::AudioWorklet::~AudioWorklet() (this=0x7f541a012660, __in_chrg=<optimized out>) at /app/webkit/Source/WebCore/Modules/webaudio/AudioWorklet.h:42 #11 0x00007f55d465a590 in WebCore::AudioWorklet::~AudioWorklet() (this=0x7f541a012660, __in_chrg=<optimized out>) at /app/webkit/Source/WebCore/Modules/webaudio/AudioWorklet.h:42 #12 0x00007f55d22fd676 in WTF::RefCounted<WebCore::Worklet>::deref() const (this=0x7f541a012698) at /app/webkit/WebKitBuild/GTK/Debug/WTF/Headers/wtf/RefCounted.h:204 #13 0x00007f55d22f62ec in WebCore::Worklet::deref() const (this=0x7f541a012660) at /app/webkit/Source/WebCore/worklets/Worklet.h:48 #14 0x00007f55d2301620 in WTF::DefaultRefDerefTraits<WebCore::Worklet>::derefIfNotNull(WebCore::Worklet*) (ptr=0x7f541a012660) at /app/webkit/WebKitBuild/GTK/Debug/WTF/Headers/wtf/Ref.h:62 #15 0x00007f55d22fd6c7 in WTF::Ref<WebCore::Worklet, WTF::RawPtrTraits<WebCore::Worklet>, WTF::DefaultRefDerefTraits<WebCore::Worklet> >::~Ref() (this=0x7f55ad072aa0, __in_chrg=<optimized out>) at /app/webkit/WebKitBuild/GTK/Debug/WTF/Headers/wtf/Ref.h:82 #16 0x00007f55d3e08074 in WebCore::JSDOMWrapper<WebCore::Worklet, WTF::RawPtrTraits<WebCore::Worklet> >::~JSDOMWrapper() (this=0x7f55ad072a88, __in_chrg=<optimized out>) at /app/webkit/Source/WebCore/bindings/js/JSDOMWrapper.h:80 #17 0x00007f55d3e081fc in WebCore::JSWorklet::~JSWorklet() (this=0x7f55ad072a88, __in_chrg=<optimized out>) at /app/webkit/WebKitBuild/GTK/Debug/WebCore/DerivedSources/JSWorklet.h:29 #18 0x00007f55d3e08220 in WebCore::JSWorklet::destroy(JSC::JSCell*) (cell=0x7f55ad072a88) at /app/webkit/WebKitBuild/GTK/Debug/WebCore/DerivedSources/JSWorklet.cpp:164 #19 0x00007f55c1da79db in JSC::JSDestructibleObjectDestroyFunc::operator()(JSC::VM&, JSC::JSCell*) const (this=0x7fffd45f9da7, cell=0x7f55ad072a88) at /app/webkit/Source/JavaScriptCore/runtime/JSDestructibleObjectHeapCellType.cpp:43 #20 0x00007f55c1da7b28 in JSC::JSDestructibleObjectHeapCellType::destroy(JSC::VM&, JSC::JSCell*) const (this=0x7f542a4007d8, vm=..., cell=0x7f55ad072a88) at /app/webkit/Source/JavaScriptCore/runtime/JSDestructibleObjectHeapCellType.cpp:61 #21 0x00007f55c1605d1f in JSC::Subspace::destroy(JSC::VM&, JSC::JSCell*) (this=0x7f55ad142200, vm=..., cell=0x7f55ad072a88) at /app/webkit/Source/JavaScriptCore/heap/Subspace.cpp:66 #22 0x00007f55c15fc0a4 in JSC::PreciseAllocation::sweep() (this=0x7f55ad072a18) at /app/webkit/Source/JavaScriptCore/heap/PreciseAllocation.cpp:274 #23 0x00007f55c15e01ea in JSC::MarkedSpace::sweepPreciseAllocations() (this=0x7f542a400188) at /app/webkit/Source/JavaScriptCore/heap/MarkedSpace.cpp:235 #24 0x00007f55c151aa56 in JSC::Heap::sweepInFinalize() (this=0x7f542a4000c8) at /app/webkit/Source/JavaScriptCore/heap/Heap.cpp:2279 #25 0x00007f55c151a41a in JSC::Heap::finalize() (this=0x7f542a4000c8) at /app/webkit/Source/JavaScriptCore/heap/Heap.cpp:2213 #26 0x00007f55c151a1c0 in JSC::Heap::handleNeedFinalize(unsigned int) (this=0x7f542a4000c8, oldState=13) at /app/webkit/Source/JavaScriptCore/heap/Heap.cpp:2151 #27 0x00007f55c151a214 in JSC::Heap::handleNeedFinalize() (this=0x7f542a4000c8) at /app/webkit/Source/JavaScriptCore/heap/Heap.cpp:2162 #28 0x00007f55c15189d8 in JSC::Heap::finishChangingPhase(JSC::GCConductor) (this=0x7f542a4000c8, conn=JSC::GCConductor::Mutator) at /app/webkit/Source/JavaScriptCore/heap/Heap.cpp:1764 #29 0x00007f55c151889f in JSC::Heap::changePhase(JSC::GCConductor, JSC::CollectorPhase) (this=0x7f542a4000c8, conn=JSC::GCConductor::Mutator, nextPhase=JSC::CollectorPhase::NotRunning) at /app/webkit/Source/JavaScriptCore/heap/Heap.cpp:1739 #30 0x00007f55c1518825 in JSC::Heap::runEndPhase(JSC::GCConductor) (this=0x7f542a4000c8, conn=JSC::GCConductor::Mutator) at /app/webkit/Source/JavaScriptCore/heap/Heap.cpp:1729 #31 0x00007f55c1516de7 in JSC::Heap::runCurrentPhase(JSC::GCConductor, JSC::CurrentThreadState*) (this=0x7f542a4000c8, conn=JSC::GCConductor::Mutator, currentThreadState=0x7fffd45fa120) at /app/webkit/Source/JavaScriptCore/heap/Heap.cpp:1375 #32 0x00007f55c15199d8 in operator()(JSC::CurrentThreadState&) const (__closure=0x7fffd45fa1c0, state=...) at /app/webkit/Source/JavaScriptCore/heap/Heap.cpp:1990 #33 0x00007f55c155c912 in WTF::ScopedLambdaFunctor<void(JSC::CurrentThreadState&), JSC::Heap::collectInMutatorThread()::<lambda(JSC::CurrentThreadState&)> >::implFunction(void *, JSC::CurrentThreadState &) (argument=0x7fffd45fa1b0, arguments#0=...) at /app/webkit/WebKitBuild/GTK/Debug/WTF/Headers/wtf/ScopedLambda.h:106 #34 0x00007f55c15e4561 in WTF::ScopedLambda<void (JSC::CurrentThreadState&)>::operator()<JSC::CurrentThreadState&>(JSC::CurrentThreadState&) const (this=0x7fffd45fa1b0) at /app/webkit/WebKitBuild/GTK/Debug/WTF/Headers/wtf/ScopedLambda.h:58 #35 0x00007f55c15dbaee in JSC::callWithCurrentThreadState(WTF::ScopedLambda<void (JSC::CurrentThreadState&)> const&) (lambda=...) at /app/webkit/Source/JavaScriptCore/heap/MachineStackMarker.cpp:225 #36 0x00007f55c1519af5 in JSC::Heap::collectInMutatorThread() (this=0x7f542a4000c8) at /app/webkit/Source/JavaScriptCore/heap/Heap.cpp:2002 #37 0x00007f55c15199a9 in JSC::Heap::stopIfNecessarySlow(unsigned int) (this=0x7f542a4000c8, oldState=21) at /app/webkit/Source/JavaScriptCore/heap/Heap.cpp:1971 #38 0x00007f55c153c8ba in JSC::Heap::waitForCollector<JSC::Heap::waitForCollection(Ticket)::<lambda(const WTF::AbstractLocker&)> >(const struct {...} &) (this=0x7f542a4000c8, func=...) at /app/webkit/Source/JavaScriptCore/heap/Heap.cpp:2028 #39 0x00007f55c151aa20 in JSC::Heap::waitForCollection(unsigned long) (this=0x7f542a4000c8, ticket=5) at /app/webkit/Source/JavaScriptCore/heap/Heap.cpp:2271 #40 0x00007f55c1516647 in JSC::Heap::collectSync(JSC::GCRequest) (this=0x7f542a4000c8, request=...) at /app/webkit/Source/JavaScriptCore/heap/Heap.cpp:1285 #41 0x00007f55c151611e in JSC::Heap::collect(JSC::Synchronousness, JSC::GCRequest) (this=0x7f542a4000c8, synchronousness=JSC::Sync, request=...) at /app/webkit/Source/JavaScriptCore/heap/Heap.cpp:1205 #42 0x00007f55c14fbf56 in JSC::FullGCActivityCallback::doCollection(JSC::VM&) (this=0x7f55ad00c120, vm=...) at /app/webkit/Source/JavaScriptCore/heap/FullGCActivityCallback.cpp:55 #43 0x00007f55d66d34fd in WebCore::OpportunisticTaskScheduler::FullGCActivityCallback::doCollection(JSC::VM&) (this=0x7f55ad00c120, vm=...) at /app/webkit/Source/WebCore/page/OpportunisticTaskScheduler.cpp:224 #44 0x00007f55c150bb27 in JSC::GCActivityCallback::doWork(JSC::VM&) (this=0x7f55ad00c120, vm=...) at /app/webkit/Source/JavaScriptCore/heap/GCActivityCallback.cpp:66 #45 0x00007f55c1edbdad in JSC::JSRunLoopTimer::timerDidFire() (this=0x7f55ad00c120) at /app/webkit/Source/JavaScriptCore/runtime/JSRunLoopTimer.cpp:236 #46 0x00007f55c1edae91 in JSC::JSRunLoopTimer::Manager::timerDidFire() (this=0x7f55ad015080) at /app/webkit/Source/JavaScriptCore/runtime/JSRunLoopTimer.cpp:109 #47 0x00007f55c1eda8bc in JSC::JSRunLoopTimer::Manager::timerDidFireCallback() (this=0x7f55ad015080) at /app/webkit/Source/JavaScriptCore/runtime/JSRunLoopTimer.cpp:56 #48 0x00007f55c1ef0bb2 in std::__invoke_impl<void, void (JSC::JSRunLoopTimer::Manager::*&)(), JSC::JSRunLoopTimer::Manager*&>(std::__invoke_memfun_deref, void (JSC::JSRunLoopTimer::Manager::*&)(), JSC::JSRunLoopTimer::Manager*&) (__f=@0x7f55ad0150c8: (void (JSC::JSRunLoopTimer::Manager::*)(class JSC::JSRunLoopTimer::Manager * const)) 0x7f55c1eda8a4 <JSC::JSRunLoopTimer::Manager::timerDidFireCallback()>, __t=@0x7f55ad0150d8: 0x7f55ad015080) at /usr/include/c++/13.2.0/bits/invoke.h:74 #49 0x00007f55c1ef0b2b in std::__invoke<void (JSC::JSRunLoopTimer::Manager::*&)(), JSC::JSRunLoopTimer::Manager*&>(void (JSC::JSRunLoopTimer::Manager::*&)(), JSC::JSRunLoopTimer::Manager*&) (__fn=@0x7f55ad0150c8: (void (JSC::JSRunLoopTimer::Manager::*)(class JSC::JSRunLoopTimer::Manager * const)) 0x7f55c1eda8a4 <JSC::JSRunLoopTimer::Manager::timerDidFireCallback()>) at /usr/include/c++/13.2.0/bits/invoke.h:96 #50 0x00007f55c1ef0aa1 in std::_Bind<void (JSC::JSRunLoopTimer::Manager::*(JSC::JSRunLoopTimer::Manager*))()>::__call<void, , 0ul>(std::tuple<>&&, std::_Index_tuple<0ul>) (this=0x7f55ad0150c8, __args=...) at /usr/include/c++/13.2.0/functional:506 #51 0x00007f55c1ef0a2b in std::_Bind<void (JSC::JSRunLoopTimer::Manager::*(JSC::JSRunLoopTimer::Manager*))()>::operator()<, void>() (this=0x7f55ad0150c8) at /usr/include/c++/13.2.0/functional:591 #52 0x00007f55c1ef09d4 in WTF::Detail::CallableWrapper<std::_Bind<void (JSC::JSRunLoopTimer::Manager::*(JSC::JSRunLoopTimer::Manager*))()>, void>::call() (this=0x7f55ad0150c0) at /app/webkit/WebKitBuild/GTK/Debug/WTF/Headers/wtf/Function.h:53 #53 0x00007f55c0ff5d7d in WTF::Function<void ()>::operator()() const (this=0x7f55ad028aa8) at /app/webkit/WebKitBuild/GTK/Debug/WTF/Headers/wtf/Function.h:82 #54 0x00007f55c1eb8c88 in WTF::RunLoop::Timer::fired() (this=0x7f55ad028a80) at /app/webkit/WebKitBuild/GTK/Debug/WTF/Headers/wtf/RunLoop.h:193 #55 0x00007f55c2a7a69f in operator()(gpointer) const (__closure=0x0, userData=0x7f55ad028a80) at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:177 #56 0x00007f55c2a7a6df in _FUN(gpointer) () at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:181 #57 0x00007f55c2a79ae5 in operator()(GSource*, GSourceFunc, gpointer) const (__closure=0x0, source=0x563f785d81c0, callback=0x7f55c2a7a6c2 <_FUN(gpointer)>, userData=0x7f55ad028a80) at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:53 #58 0x00007f55c2a79b33 in _FUN(GSource*, GSourceFunc, gpointer) () at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:56 #59 0x00007f55bb317d36 in g_main_dispatch (context=0x563f77f7dcc0) at ../glib/gmain.c:3460 #60 g_main_context_dispatch (context=0x563f77f7dcc0) at ../glib/gmain.c:4200 #61 0x00007f55bb3752b8 in g_main_context_iterate.isra.0 (context=0x563f77f7dcc0, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/gmain.c:4276 #62 0x00007f55bb3173ff in g_main_loop_run (loop=0x563f782f2d10) at ../glib/gmain.c:4479 #63 0x00007f55c2a7a20e in WTF::RunLoop::run() () at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:108 #64 0x00007f55d1f0e10b in WebKit::AuxiliaryProcessMainBase<WebKit::WebProcess, true>::run(int, char**) (this=0x7fffd45fa950, argc=5, argv=0x7fffd45fab18) at /app/webkit/Source/WebKit/Shared/AuxiliaryProcessMain.h:72 #65 0x00007f55d1f09ed9 in WebKit::AuxiliaryProcessMain<WebKit::WebProcessMainGtk>(int, char**) (argc=5, argv=0x7fffd45fab18) at /app/webkit/Source/WebKit/Shared/AuxiliaryProcessMain.h:98 #66 0x00007f55d1f06a0d in WebKit::WebProcessMain(int, char**) (argc=5, argv=0x7fffd45fab18) at /app/webkit/Source/WebKit/WebProcess/gtk/WebProcessMainGtk.cpp:106 #67 0x0000563f7741f979 in main(int, char**) (argc=5, argv=0x7fffd45fab18) at /app/webkit/Source/WebKit/WebProcess/EntryPoint/unix/WebProcessMain.cpp:31
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2024-10-30 08:52:25 PDT
webkit.org/b/282331
[ Debug ] http/wpt/webaudio/the-audio-api/the-audioworklet-interface/audioworklet-postmessage-message-port.https.html [ Crash ]
webkit.org/b/282331
[ Debug ] imported/w3c/web-platform-tests/content-security-policy/gen/top.http-rp/script-src-self/worklet-paint-import-data.https.html [ Crash ]
webkit.org/b/282331
[ Debug ] imported/w3c/web-platform-tests/content-security-policy/gen/top.http-rp/script-src-wildcard/worklet-paint-import-data.https.html [ Crash ]
webkit.org/b/282331
[ Debug ] imported/w3c/web-platform-tests/content-security-policy/gen/top.http-rp/worker-src-none/worklet-paint-import-data.https.html [ Crash ]
webkit.org/b/282331
[ Debug ] imported/w3c/web-platform-tests/content-security-policy/gen/top.http-rp/worker-src-self/worklet-audio-import-data.https.html [ Crash ]
webkit.org/b/282331
[ Debug ] imported/w3c/web-platform-tests/content-security-policy/gen/top.http-rp/worker-src-self/worklet-layout-import-data.https.html [ Crash ]
webkit.org/b/282331
[ Debug ] imported/w3c/web-platform-tests/content-security-policy/gen/top.http-rp/worker-src-wildcard/worklet-paint-import-data.https.html [ Crash ]
webkit.org/b/282331
[ Debug ] imported/w3c/web-platform-tests/content-security-policy/gen/top.meta/script-src-self/worklet-layout.https.html [ Crash ]
webkit.org/b/282331
[ Debug ] imported/w3c/web-platform-tests/content-security-policy/gen/top.meta/script-src-wildcard/worklet-audio.https.html [ Crash ]
webkit.org/b/282331
[ Debug ] imported/w3c/web-platform-tests/content-security-policy/gen/top.meta/worker-src-none/worklet-layout-import-data.https.html [ Crash ]
webkit.org/b/282331
[ Debug ] imported/w3c/web-platform-tests/content-security-policy/gen/top.meta/worker-src-self/worklet-audio.https.html [ Crash ]
webkit.org/b/282331
[ Debug ] imported/w3c/web-platform-tests/content-security-policy/gen/top.meta/worker-src-wildcard/worklet-audio.https.html [ Crash ]
webkit.org/b/282331
[ Debug ] imported/w3c/web-platform-tests/html/browsers/browsing-the-web/navigating-across-documents/javascript-url-abort/javascript-url-abort-return-value-string.tentative.html [ Crash ]
webkit.org/b/282331
[ Debug ] imported/w3c/web-platform-tests/mixed-content/gen/top.http-rp/opt-in/worklet-layout-import-data.https.html [ Crash ]
webkit.org/b/282331
[ Debug ] imported/w3c/web-platform-tests/mixed-content/gen/top.meta/opt-in/worklet-paint-import-data.https.html [ Crash ]
webkit.org/b/282331
[ Debug ] imported/w3c/web-platform-tests/mixed-content/gen/top.meta/unset/worklet-layout-import-data.https.html [ Crash ]
webkit.org/b/282331
[ Debug ] imported/w3c/web-platform-tests/navigation-api/navigate-event/navigate-navigation-back-same-document.html [ Crash ]
webkit.org/b/282331
[ Debug ] imported/w3c/web-platform-tests/navigation-api/navigation-methods/forward-to-pruned-entry.html [ Crash ]
webkit.org/b/282331
[ Debug ] imported/w3c/web-platform-tests/service-workers/cache-storage/serviceworker/cache-abort.https.html [ Crash ]
webkit.org/b/282331
[ Debug ] imported/w3c/web-platform-tests/service-workers/service-worker/redirected-response.https.html [ Crash ]
webkit.org/b/282331
[ Debug ] imported/w3c/web-platform-tests/upgrade-insecure-requests/gen/iframe-blank-inherit.meta/unset/worklet-audio.https.html [ Crash ]
webkit.org/b/282331
[ Debug ] imported/w3c/web-platform-tests/upgrade-insecure-requests/gen/iframe-blank-inherit.meta/upgrade/worklet-audio.https.html [ Crash ]
webkit.org/b/282331
[ Debug ] imported/w3c/web-platform-tests/upgrade-insecure-requests/gen/srcdoc-inherit.meta/unset/worklet-audio.https.html [ Crash ]
Philippe Normand
Comment 2
2024-10-30 08:56:53 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35940
EWS
Comment 3
2024-10-30 08:59:02 PDT
Committed
285905@main
(b27300e42a5a): <
https://commits.webkit.org/285905@main
> Reviewed commits have been landed. Closing PR #35940 and removing active labels.
Philippe Normand
Comment 4
2024-10-30 08:59:29 PDT
.
Philippe Normand
Comment 5
2024-11-18 04:03:36 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36799
EWS
Comment 6
2024-11-18 07:42:20 PST
Committed
286725@main
(de32c4a55821): <
https://commits.webkit.org/286725@main
> Reviewed commits have been landed. Closing PR #36799 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug