[GTK][Debug] Crash in AudioWorkletMessagingProxy destructor https://bugs.webkit.org/show_bug.cgi?id=282331

Reviewed by Chris Dumez.

Declare the AudioWorkletMessagingProxy as final, without this, GCC builds hit an ASSERT in the
destructor.

* LayoutTests/platform/glib/TestExpectations:
* Source/WebCore/Modules/webaudio/AudioWorkletMessagingProxy.h:
(WebCore::AudioWorkletMessagingProxy::create): Deleted.
(WebCore::AudioWorkletMessagingProxy::workletThread): Deleted.
(WebCore::AudioWorkletMessagingProxy::checkedPtrCount const): Deleted.
(WebCore::AudioWorkletMessagingProxy::checkedPtrCountWithoutThreadCheck const): Deleted.
(WebCore::AudioWorkletMessagingProxy::incrementCheckedPtrCount const): Deleted.
(WebCore::AudioWorkletMessagingProxy::decrementCheckedPtrCount const): Deleted.

Canonical link: https://commits.webkit.org/286725@main